<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeTrackGPS</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About FreeTrackGPS</string>
    <string name="gpsSetting">Location Settings</string>
    <string name="gpsStatusLabel">GPS Status</string>
    <string name="gpsPositionLabel">Position GPS</string>
    <string name="workoutStatusLabel">Workout status</string>
    <string name="workoutDistanceLabel">Distance</string>
    <string name="workoutStartLabel">Start</string>
    <string name="workoutPauseLabel">Pause</string>
    <string name="settingGPSSpeedScan">Speed GPS scan</string>
    <string name="settingDistanceBetweenPointLabel">Distance between points</string>
    <string name="settingShowWorkoutInfoLabel">Show workout info if stop</string>
    <string name="offLabel">Off</string>
    <string name="onLabel">On</string>
    <string name="pauseLabel">Pause</string>
    <string name="unPauseLabel">UnPause</string>
    <string name="startLabel">Start</string>
    <string name="stopLabel">Stop</string>
    <string name="activeLabel">Active</string>
    <string name="aboutProgram">Simple application for saving gps workout to GPX file</string>
    <string name="versionLabel">version</string>
    <string name="SaveTrueInfo">Save workout in</string>
    <string name="SaveFalseInfo">Error save workout in</string>
    <string name="closeSettingsInfo">Restart application for apply changes</string>
    <string name="finishApp">Close FreeTrackGPS</string>
    <string name="finishAppInfo">Do you want close application?</string>
    <string name="NotificationLabel">Show notification workout</string>
    <string name="workoutsListLabel">Workouts list</string>
    <string name="workoutDeleteLabel">delete</string>
    <string name="workoutExportLabel">export</string>
    <string name="workoutsFilterByDate">Filter by date</string>
    <string name="okLabel">Ok</string>
    <string name="cancelLabel">Cancel</string>
    <string name="setFilterLabel">Set filter for workouts</string>
    <string name="menu">Menu</string>
    <string name="changeNameLabel">change name</string>
    <string name="changeWorkoutNameLabel">Change workout name</string>
    <string name="changeWorkoutNameFilterLabel">Change value filter by name</string>
    <string name="workoutsFilterByName">Filter by name</string>
    <string name="Unnamend">Unnamed</string>
    <string name="startTimeLabel">Start time</string>
    <string name="endTimeLabel">End time</string>
    <string name="Points">Points</string>
    <string name="minHeight">Min height</string>
    <string name="maxHeight">Max height</string>
    <string name="action_info">About workout</string>
    <string name="yesLabel">Yes</string>
    <string name="noLabel">No</string>
    <string name="action_ignorepoints_list">Ignore points</string>
    <string name="action_ignorepoints_add">Add point manually</string>
    <string name="errorValueInfo">Any of the value is empty</string>
    <string name="ignorePointNotify">Ignore Points Area</string>
    <string name="ignorePointsInfo">Here you can modify the list of points that while training to be skipped.
    </string>
    <string name="latitudeLabel">Latitude</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="ignorePointsExists">Points already exist</string>
    <string name="action_ignorepoints_add_from_map">Add point from map</string>
    <string name="nameLabel">Name</string>
    <string name="vibraNotifylabel">Vibration notifications</string>
    <string name="workout">Workout</string>
    <string name="exitAlertLabel">Warning before leaving</string>
    <string name="workoutInfoDetailsLabel">Details</string>
    <string name="workoutInfoMapLabel">Map</string>
    <string name="startPointLabel">Start</string>
    <string name="endPointLabel">End</string>
    <string name="deleteWorkoutTitleAlert">Deleting workout</string>
    <string name="deleteWorkoutTextAlert">Do you want delete workout?</string>
    <string name="centerToLocationMap">Center to current Location</string>
    <string name="addIgnorePointDesciption">Here you can add ignored point from map. Click on any
        point on the map to mark</string>
    <string name="doneLabel">Done</string>
    <string name="notificationsGroupLabel">Notifications</string>
    <string name="otherSettingsLabel">Others</string>
    <string name="settingShwoWorkoutInfoTitle">Show workout info</string>
    <string name="gpsWorkoutSettingsLabel">GPS settings</string>
    <string name="disableMapSettingLabel">Disable map</string>
    <string name="exportingTitleLabel">Exporting</string>
    <string name="exportingMessageLabel">Please Wait...</string>
    <string name="resetFiltersLabel">Reset filters</string>
    <string name="menuFiltersLabel">Filters</string>
    <string name="action_workout_mapview">Workout map</string>
    <string name="gpsOffText">GPS is off</string>
</resources>
