<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/notificationsGroupLabel">
        <CheckBoxPreference
                android:title="@string/NotificationLabel"
                android:defaultValue="true"
                android:key="showNotificationWorkout"/>
        <CheckBoxPreference
                android:title="@string/vibraNotifylabel"
                android:defaultValue="false"
                android:key="vibrateNotification"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/otherSettingsLabel">
        <CheckBoxPreference
                android:title="@string/settingShowWorkoutInfoLabel"
                android:defaultValue="false"
                android:key="showWorkoutInfo"/>
        <CheckBoxPreference
                android:title="@string/exitAlertLabel"
                android:defaultValue="true"
                android:key="exitAlert"/>
        <ListPreference
                android:key="distance"
                android:title="@string/settingDistanceBetweenPointLabel"
                android:entries="@array/viewDistanceSetting"
                android:entryValues="@array/distanceArray"
                android:defaultValue="@string/distanceArrayDefault"
        />

        <ListPreference
                android:key="time"
                android:title="@string/settingGPSSpeedScan"
                android:entries="@array/viewTimeSetting"
                android:entryValues="@array/timeArray"
                android:defaultValue="@string/timeArrayDefault"
        />

    </PreferenceCategory>
</PreferenceScreen>
