<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_ignorePoints"
            android:orderInCategory="99"
            android:showAsAction="never"
            android:title="@string/action_ignorePoints" android:menuCategory="system"/>
    <item
            android:id="@+id/action_workout"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/workoutsListLabel" android:menuCategory="system"/>

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="200"
            android:showAsAction="never"
            android:title="@string/action_settings" android:menuCategory="system"/>

    <item
            android:id="@+id/gpsSetting"
            android:orderInCategory="300"
            android:showAsAction="never"
            android:title="@string/gpsSetting" android:menuCategory="system"/>

    <item
            android:id="@+id/action_about"
            android:orderInCategory="400"
            android:showAsAction="never"
            android:title="@string/action_about" android:menuCategory="system"/>
</menu>
