<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:theme="@style/Theme.Transparent" style="@style/Theme.Transparent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okLabel"
            android:id="@+id/okButton"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelLabel"
            android:id="@+id/cancelButton"
            android:layout_alignParentBottom="true" android:layout_alignRight="@+id/datePicker"
            android:layout_alignEnd="@+id/datePicker"/>
    <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:calendarViewShown="false"
            android:layout_centerVertical="true" android:layout_alignLeft="@+id/okButton"
            android:layout_alignStart="@+id/okButton"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setFilterLabel"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
            android:textSize="20dp" android:textStyle="bold"/>
</RelativeLayout>
