<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/action_about">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_marginTop="65dp"
            android:layout_toEndOf="@+id/imageView" android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView" android:layout_marginLeft="30dp" android:layout_x="80dp"
            android:layout_y="62dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_toStartOf="@+id/textView" android:src="@drawable/icon"
            android:layout_alignTop="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_x="31dp" android:layout_y="52dp"/>
    <TextView
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:text="@string/aboutProgram"
            android:id="@+id/textView2" android:layout_x="90dp" android:layout_y="120dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/textView3" android:layout_x="147dp" android:layout_y="95dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionLabel"
            android:id="@+id/textView4" android:layout_x="90dp" android:layout_y="95dp"/>
</AbsoluteLayout>